[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heare-auth"
version = "0.1.0"
description = "Simple API key validation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "structlog>=24.1.0",
    "heare-ids>=0.1.0",
    "heare-stats-client>=0.0.8",
    "statsd>=4.0.1",
    "cryptography>=46.0.3",
]

[project.scripts]
heare-auth = "heare_auth.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
